# Seq2Seq-English-Vietnamese-Translation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  data_utils.py  evaluator.py  inference.py  model.py  test.py  train.py  trainer.py  translator.py  visualize_attn_map.py
