[project]
name = "seq2seq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchtext>=0.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.2.1",
    "python-dotenv>=1.2.1",
]
